src/objects/StaffSchedule__c.object
<CustomObject>
    <fields>
        <fullName>CommentLst__c</fullName>
        <label>コメント</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>電車遅延による遅刻</fullName>
                </value>
                <value>
                    <fullName>私用にて遅刻</fullName>
                </value>
                <value>
                    <fullName>私用にて早退</fullName>
                </value>
                <value>
                    <fullName>体調不良にて遅刻</fullName>
                </value>
                <value>
                    <fullName>体調不良にて早退</fullName>
                </value>
                <value>
                    <fullName>体調不良にて休み</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <label>行動ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTitle__c</fullName>
        <description>該当設定値により、行動の件名を設定する</description>
        <label>行動件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchKey__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>従業員+&apos;_&apos; + 勤怠日(ID_YYYY/MM/DD)</inlineHelpText>
        <label>SearchKey</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StaffUserRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>従業員</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StaffUserRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusLst__c</fullName>
        <label>開始ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5:00</fullName>
                </value>
                <value>
                    <fullName>5:30</fullName>
                </value>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>6:30</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>経理</fullName>
                </value>
                <value>
                    <fullName>公休</fullName>
                </value>
                <value>
                    <fullName>代休</fullName>
                </value>
                <value>
                    <fullName>半休</fullName>
                </value>
                <value>
                    <fullName>希望休</fullName>
                </value>
                <value>
                    <fullName>有休</fullName>
                </value>
                <value>
                    <fullName>夏休</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StopStatusLst__c</fullName>
        <label>終了ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10：00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>23:30</fullName>
                </value>
                <value>
                    <fullName>0:00</fullName>
                </value>
                <value>
                    <fullName>0:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeManagementRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>勤怠管理</label>
        <referenceTo>TimeManagement__c</referenceTo>
        <relationshipName>StaffTimeManagementRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkDay__c</fullName>
        <label>勤怠日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>シフト</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SearchKey__c</columns>
        <columns>StatusLst__c</columns>
        <columns>CommentLst__c</columns>
        <columns>WorkDay__c</columns>
        <columns>StaffUserRef__c</columns>
        <columns>TimeManagementRef__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>SS-{00000000}</displayFormat>
        <label>採番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>